--- a/azdo_pipelines/build-train.yml
+++ b/azdo_pipelines/build-train.yml
@@ -15,6 +15,18 @@ steps:
    python -m pip install -r requirements.txt
   displayName: 'Install Packages'
 
+- script: |
+   pip install flake8
+   pip install flake8_formatter_junit_xml
+   flake8 --format junit-xml --output-file $(Build.BinariesDirectory)/flake8_report.xml --ignore=E111,E402
+  displayName: 'Check code quality'
+  
+- task: PublishTestResults@2
+  condition: succeededOrFailed()
+  inputs:
+    testResultsFiles: '$(Build.BinariesDirectory)/*_report.xml'
+    testRunTitle: 'Publish test results'
+
 - bash: |
    #Create Azure Databricks cluster
    
