--- a/azdo_pipelines/build-train.yml
+++ b/azdo_pipelines/build-train.yml
@@ -30,7 +30,7 @@ steps:
 - bash: |
    #Create Azure Databricks cluster
    
-   clus_id=$(python3 $(Build.SourcesDirectory)/cluster_config/cluster_manager.py --domain=$(databricks_domain) --token=$(databricks_access_token) --clustername="$(Build.BuildNumber)" --clusterid="$(cluster_id)" 2>&1 >/dev/null) 
+   clus_id=$(python3 $(Build.SourcesDirectory)/cluster_config/cluster_manager.py --domain $(databricks_domain) --token $(databricks_access_token) --clustername "$(Build.BuildNumber)" --clusterid "$(cluster_id)" 2>&1 >/dev/null) 
    
    echo "##vso[task.setvariable variable=existing_databricks_cluster_id]$clus_id"  
    
@@ -39,7 +39,7 @@ steps:
 - bash: |
    # Login to Databricks CLI and create dbfs direcotory for model
    databricks configure --token << ANSWERS
-   https://centralus.azuredatabricks.net
+   https://$(databricks_domain)
    $(databricks_access_token)
    ANSWERS
    dbfs mkdirs dbfs:/model
@@ -50,7 +50,7 @@ steps:
     targetType: 'inline'
     script: # Invoke the Python training pipeline
       
-      python3 $(Build.SourcesDirectory)/aml_service/pipelines/train_pipeline.py --cluster-id="$(existing_databricks_cluster_id)" --workspace-name="$(aml_workspace_name)" --resource-group="$(azure_resource_group)" --subscription-id="$(azure_subscription_id)" --app-id="$(sp_app_id)" --app-secret="$(sp_app_secret)" --tenant-id="$(azure_tenant_id)" --experiment-folder="$(Build.SourcesDirectory)/aml_service/experiment" --databricks-workspace="$(databricks_workspace_name)" --databricks-access-token="$(databricks_access_token)" --databricks-compute-name="$(databricks_compute_name_aml)" --project-folder="$(Build.SourcesDirectory)" --train-script-path="src/train/train.py" --mdl-dir="$(model_dir)" --mdl-name="AzDO"
+      python3 $(Build.SourcesDirectory)/aml_service/pipelines/train_pipeline.py --cluster-id "$(existing_databricks_cluster_id)" --workspace-name "$(aml_workspace_name)" --resource-group "$(azure_resource_group)" --subscription-id "$(azure_subscription_id)" --app-id "$(sp_app_id)" --app-secret "$(sp_app_secret)" --tenant-id "$(azure_tenant_id)" --experiment-folder "$(Build.SourcesDirectory)/aml_service/experiment" --databricks-workspace "$(databricks_workspace_name)" --databricks-access-token "$(databricks_access_token)" --databricks-compute-name "$(databricks_compute_name_aml)" --project-folder "$(Build.SourcesDirectory)" --train-script-path "src/train/train.py" --model-dir "$(model_dir)" --model-name "$(model_name)"
   displayName: 'Train model using AML with Remote Compute'
 
 - bash: |
