Docs for importing the train pipeline (#12)
* Refactored to OOP. cluster_manager, terminate ready

* Optimizing requests to create/start cluster

* Optimizing requests to create/start cluster

* Refactored to remove time from cluster class

* Tested E2E flow locally

* Implemented gathering environment vars on cluster_manager

* Changed YAML pipeline to consider env vars for cluster mgmt

* Temporarily disabling tasks on YAML

* Turning Databricks PAT into a secret

* Adjusting access to secret

* Adding env: to the bash script

* Applying failOnStdErr to all the bash tasks

* First version of env vars to train

* Adjusting bash task

* Adjustments to fix issue with training

* Removing invalid quote

* Handling NotStarted status

* failOnStdErr off for train

* Added doc for debugging using launch.json and VSCode

* failOnStderr false for training task

* Providing docs for the env vars usage

* Rephrasing 'we' by 'this project'

* Removing comments from vscode-launch-json.md

* Removing code mark from the env vars descriptions

* Adjusting description with naming suffix

* Adding values to env vars when possible

* Adding image to illustrate the experience on VSCode

* Adding disclaimer about launch.json

* Working on the train docs, added source to the bash shell

* Added first version of the train pipeline docs

* Added first version of the train pipeline docs

* Removing cursor from the screenshot

* Updating the iac doc

* Changed README to have an introduction

* Rephrasing the README header

* Updated title for the SPN creation

--- a/azdo_pipelines/build-train.yml
+++ b/azdo_pipelines/build-train.yml
@@ -4,6 +4,13 @@ trigger:
 pool:
   vmImage: 'ubuntu-latest'
 
+variables:
+  SOURCES_DIR: $[coalesce(variables['SOURCES_DIR_OVERRIDE'], '$(Build.SourcesDirectory)')]
+  TRAIN_SCRIPT_PATH: $[coalesce(variables['TRAIN_SCRIPT_PATH_OVERRIDE'], 'src/train/train.py')]
+  MODEL_DIR: $[coalesce(variables['MODEL_DIR_OVERRIDE'], '/dbfs/model')]
+  MODEL_NAME: $[coalesce(variables['MODEL_NAME_OVERRIDE'], 'MLOps-model')]
+  DATABRICKS_COMPUTE_NAME_AML: $[coalesce(variables['DATABRICKS_COMPUTE_NAME_AML_OVERRIDE'], 'ADB-Compute')]
+
 steps:
 - task: UsePythonVersion@0
   displayName: 'Use Python 3.x'
